--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -112,33 +112,33 @@ resources:
         RestApiId:
           Ref: ApiGatewayRestApi
 
-    # # TODO: Create a DynamoDB table with local secondary index and a composite key
-    # TodosTable:
-    #   Type: AWS::DynamoDB::Table
-    #   Properties:
-    #     AttributeDefinitions:
-    #       - AttributeName: userId
-    #         AttributeType: S
-    #       - AttributeName: todoId
-    #         AttributeType: S
-    #       - AttributeName: createdAt
-    #         AttributeType: S
-    #     KeySchema:
-    #       - AttributeName: userId
-    #         KeyType: HASH
-    #       - AttributeName: todoId
-    #         KeyType: RANGE
-    #     BillingMode: PAY_PER_REQUEST
-    #     TableName: ${self:provider.environment.TODOS_TABLE}
-    #     LocalSecondaryIndexes:
-    #       - IndexName: ${self:provider.environment.TODOS_CREATED_AT_INDEX}
-    #         KeySchema:
-    #           - AttributeName: userId
-    #             KeyType: HASH
-    #           - AttributeName: createdAt
-    #             KeyType: RANGE
-    #         Projection:
-    #           ProjectionType: ALL
+    # TODO: Create a DynamoDB table with local secondary index and a composite key
+    TodosTable:
+      Type: AWS::DynamoDB::Table
+      Properties:
+        AttributeDefinitions:
+          - AttributeName: userId
+            AttributeType: S
+          - AttributeName: todoId
+            AttributeType: S
+          - AttributeName: createdAt
+            AttributeType: S
+        KeySchema:
+          - AttributeName: userId
+            KeyType: HASH
+          - AttributeName: todoId
+            KeyType: RANGE
+        BillingMode: PAY_PER_REQUEST
+        TableName: ${self:provider.environment.TODOS_TABLE}
+        LocalSecondaryIndexes:
+          - IndexName: ${self:provider.environment.TODOS_CREATED_AT_INDEX}
+            KeySchema:
+              - AttributeName: userId
+                KeyType: HASH
+              - AttributeName: createdAt
+                KeyType: RANGE
+            Projection:
+              ProjectionType: ALL
 
     # # TODO: Complete the bucket properties below.
     # # Do not forget to add the CorsConfiguration propoerty
