refactor: Add IAM role to scan DynamoDB records

--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -25,6 +25,7 @@ provider:
     TODOS_CREATED_AT_INDEX: CreatedAtIndex
     ATTACHMENT_S3_BUCKET: serverless-todo-images-${self:provider.stage}
     SIGNED_URL_EXPIRATION: 300
+    AWS_REGION: us-east-1
 
   logs:
     restApi: true
@@ -52,6 +53,12 @@ functions:
           path: todos
           cors: true
           authorizer: Auth
+    # iamRoleStatementsInherit: true
+    # iamRoleStatements:
+    #   - Effect: Allow
+    #     Action:
+    #       - dynamodb:Scan
+    #     Resource: arn:aws:dynamodb:${self:provider.environment.AWS_REGION}:*:table/${self:provider.environment.TODOS_TABLE}
 
   # # TODO: Configure this function -
   # # Provide iamRoleStatements property. Decide the Actions and AWS Resource.
@@ -112,7 +119,6 @@ resources:
         RestApiId:
           Ref: ApiGatewayRestApi
 
-    # TODO: Create a DynamoDB table with local secondary index and a composite key
     TodosTable:
       Type: AWS::DynamoDB::Table
       Properties:
